fixed bug for background img on ios mobile

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body.is-os #page-header {
   background-size: cover !important; */
   background: url("../assets/images/logo/op_pig_illustration_tattoo7.jpg") center top;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-size: cover;
 }
 
